manifests/showks-aggregator/manifest.yaml
---
# Source: showks-aggregator/templates/rolebinding.yml
---
# Source: showks-aggregator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-aggregator-temp
  namespace: showks
  labels:
    app: showks-aggregator-temp
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: app-port
  selector:
    app: showks-aggregator-temp

---
# Source: showks-aggregator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-aggregator-temp
  namespace: showks
  labels:
    app: showks-aggregator-temp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-aggregator-temp
  template:
    metadata:
      labels:
        app: showks-aggregator-temp
    spec:
      containers:
        - name: showks-aggregator-temp
          image: gcr.io/ipc-containerdays/showks-aggregator:stg-2bd25ddd7d6631480199b8bdb452313a3a90a1c4
          ports:
            - name: app-port
              containerPort: 8081
              protocol: TCP
